--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,6 +1,10 @@
 name: Python package
 
-on: [push]
+on:
+  psuh:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '15 * * * *'
 
 jobs:
   build:
