schedule regular hourly builds

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,7 +1,7 @@
 name: Python package
 
 on:
-  psuh:
+  push:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '15 * * * *'
