--- a/tutorial/inference_4_bbh_example/gw150914_like.ini
+++ b/tutorial/inference_4_bbh_example/gw150914_like.ini
@@ -39,17 +39,12 @@ max-delta_tc = 0.1
 ; we need to provide tc to the waveform generator
 name = custom
 inputs = delta_tc
-tc = ${data|trigger-time} + delta_tc
+tc = trigger_time + delta_tc
 
 [prior-mass1]
 name = uniform
 min-mass1 = 10.
 max-mass1 = 80.
-
-[prior-mass2]
-name = uniform
-min-mass2 = 10.
-max-mass2 = 80.
 
 [prior-spin1_a]
 name = uniform
@@ -70,6 +65,28 @@ max-spin2_a = 0.99
 name = uniform_solidangle
 polar-angle = spin2_polar
 azimuthal-angle = spin2_azimuthal
+
+; The waveform generator expects spins to be in cartesian coordinates, with
+; names spin(1|2)(x|y|z). We therefore need to provide a waveform transform
+; that converts the spherical coordinates that we have defined the spin prior
+; in to cartesian coordinates.
+[waveform_transforms-spin1x+spin1y+spin1z]
+name = spherical_to_cartesian
+x = spin1x
+y = spin1y
+z = spin1z
+radial = spin1_a
+polar = spin1_polar
+azimuthal = spin1_azimuthal
+
+[waveform_transforms-spin2x+spin2y+spin2z]
+name = spherical_to_cartesian
+x = spin2x
+y = spin2y
+z = spin2z
+radial = spin2_a
+polar = spin2_polar
+azimuthal = spin2_azimuthal
 
 [prior-distance]
 ; following gives a uniform volume prior
