fix typos in inference 4 files

--- a/tutorial/inference_4_bbh_example/gw150914_like.ini
+++ b/tutorial/inference_4_bbh_example/gw150914_like.ini
@@ -39,7 +39,8 @@ max-delta_tc = 0.1
 ; we need to provide tc to the waveform generator
 name = custom
 inputs = delta_tc
-tc = trigger_time + delta_tc
+; we will use the trigger time from the data section
+tc = ${data|trigger-time} + delta_tc
 
 [prior-mass1]
 name = uniform
