speed up notebook 4

--- a/tutorial/inference_4_bbh_example/emcee_pt-gw150914_like.ini
+++ b/tutorial/inference_4_bbh_example/emcee_pt-gw150914_like.ini
@@ -1,9 +1,11 @@
 [sampler]
 name = emcee_pt
-nwalkers = 200
-ntemps = 20
+; for GW problems, its usually best to use 200 walkers and 20 temps;
+; here, we've reduced that just for a test
+nwalkers = 100
+ntemps = 2
 effective-nsamples = 1000
-checkpoint-interval = 2000
+checkpoint-interval = 1000
 max-samples-per-chain = 1000
 
 [sampler-burn_in]
