--- a/tutorial/inference_6_advanced_config_settings/bbh_example-src_masses.ini
+++ b/tutorial/inference_6_advanced_config_settings/bbh_example-src_masses.ini
@@ -95,15 +95,23 @@ name = uniform_sky
 ; polarization prior
 name = uniform_angle
 
-;
-;   Convert variable parameters to parameters understood
-;   by the waveform generator
-;
 [waveform_transforms-spin1x+spin1y+spin1z]
-name = spherical_spin_1_to_cartesian_spin_1
+name = spherical_to_cartesian
+x = spin1x
+y = spin1y
+z = spin1z
+radial = spin1_a
+polar = spin1_polar
+azimuthal = spin1_azimuthal
 
 [waveform_transforms-spin2x+spin2y+spin2z]
-name = spherical_spin_2_to_cartesian_spin_2
+name = spherical_to_cartesian
+x = spin2x
+y = spin2y
+z = spin2z
+radial = spin2_a
+polar = spin2_polar
+azimuthal = spin2_azimuthal
 
 [waveform_transforms-mass1]
 name = custom
