--- a/tutorial/inference_6_advanced_config_settings/bbh_example.ini
+++ b/tutorial/inference_6_advanced_config_settings/bbh_example.ini
@@ -1,7 +1,6 @@
 [model]
 name = gaussian_noise
-h1-low-frequency-cutoff = 20
-l1-low-frequency-cutoff = 20
+low-frequency-cutoff = 20
 
 [sampler]
 name = emcee_pt
@@ -16,7 +15,7 @@ burn-in-test = nacl & max_posterior
 
 [variable_params]
 ; waveform parameters that will vary in MCMC
-tc =
+delta_tc =
 mass1 =
 mass2 =
 spin1_a =
@@ -38,11 +37,10 @@ approximant = IMRPhenomPv2
 f_lower = 20
 f_ref = 20
 
-[prior-tc]
-; coalescence time prior
+[prior-delta_tc]
 name = uniform
-min-tc = 1126259462.32
-max-tc = 1126259462.52
+min-delta_tc = -0.1
+max-delta_tc = 0.1
 
 [prior-mass1]
 name = uniform
@@ -100,11 +98,33 @@ name = uniform_angle
 ;   Convert variable parameters to parameters understood
 ;   by the waveform generator
 ;
+; The waveform generator expects spins to be in cartesian coordinates, with
+; names spin(1|2)(x|y|z). We therefore need to provide a waveform transform
+; that converts the spherical coordinates that we have defined the spin prior
+; in to cartesian coordinates.
 [waveform_transforms-spin1x+spin1y+spin1z]
-name = spherical_spin_1_to_cartesian_spin_1
+name = spherical_to_cartesian
+x = spin1x
+y = spin1y
+z = spin1z
+radial = spin1_a
+polar = spin1_polar
+azimuthal = spin1_azimuthal
 
 [waveform_transforms-spin2x+spin2y+spin2z]
-name = spherical_spin_2_to_cartesian_spin_2
+name = spherical_to_cartesian
+x = spin2x
+y = spin2y
+z = spin2z
+radial = spin2_a
+polar = spin2_polar
+azimuthal = spin2_azimuthal
+
+[waveform_transforms-tc]
+; we need to provide tc to the waveform generator
+name = custom
+inputs = delta_tc
+tc = ${data|trigger-time} + delta_tc
 
 ;
 ;   Sampling transforms
