--- a/tutorial/inference_6_advanced_config_settings/gw170817_example-common_eos.ini
+++ b/tutorial/inference_6_advanced_config_settings/gw170817_example-common_eos.ini
@@ -1,7 +1,6 @@
 [model]
 name = marginalized_phase
-h1-low-frequency-cutoff = 20
-l1-low-frequency-cutoff = 20
+low-frequency-cutoff = 20
 
 [sampler]
 name = emcee_pt
