Added mass2 option in prior section in BBH example file

--- a/tutorial/inference_4_bbh_example/gw150914_like.ini
+++ b/tutorial/inference_4_bbh_example/gw150914_like.ini
@@ -47,6 +47,11 @@ name = uniform
 min-mass1 = 10.
 max-mass1 = 80.
 
+[prior-mass2]                                                                    
+name = uniform                                                                   
+min-mass2 = 10.                                                                  
+max-mass2 = 80.
+
 [prior-spin1_a]
 name = uniform
 min-spin1_a = 0.0
